Make sure preferred platform BOMs passed to ExtensionCatalogResolver are actually prioritized.
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
(cherry picked from commit 3ccbf9560819320a5df9292208091688dbe22884)